# Laboratorios_SO2

lab_2/: CMakeLists.txt  INFORM.md
lab_2/lib/: common_utils.h
lab_2/src/: cJSON.c  cliente_bluetooth.c  cliente_internet.c  cliente_unix.c  common_utils.c  servidor.c
lab_3/: .gitignore  CMakeLists.txt  INFORM.md
lab_3/src/: laboratorio3.c  valgrind_version.c
lab_3/tests/: test_tiempos.py  test_validación.py  tiempos.sh
lab_4/: .gitignore  CMakeLists.txt  INFORM.md
lab_4/lib/: imagesUtil.h
lab_4/src/: imageUtils.c  tp_4.c
lab_5/: CMakeLists.txt  INFORM.md  test.py
lab_5/lib/: server.h
lab_5/src/: server.c
lab_6/: Inform.md  Makefile
lab_6/config_files/: default  serviceSOII.service
lab_6/server/: go.mod  go.sum  main_server.go  process_serv.go  user_serv.go
lab_6/test/: delete_users.py  test.py
lab_7/: INFORM.md
